# pwr-db

./: .gitignore  CMakeLists.txt  README.md  cslim_config.conf  main.cc
dbinit/: base_init.sql  hrmanager_dep_test.sql  init.sql  logic_dep_test.sql  main.sql  managers_dep_test.sql  offer_dep_test.sql  reservation_dep_test.sql  sessionmanager_dep_test.sql  test_init.sql  users.sql
doc/: main.tex
gui/bdg/: CMakeLists.txt  bdg.pro  mainwindow.ui  windows.cmake
src/: db_connection.cc  db_connection.h  db_connection_i.h  db_defaults.h  db_session.h  hldb.cc  hldb.h  hr_manager.cc  hr_manager.h  main.cc  mysql_types.h  offer_manager.cc  offer_manager.h  privilege.h  reflect.h  reservation_manager.cc  reservation_manager.h  session_manager.cc  session_manager.h  timer.h
src/app/ui/: CMakeLists.txt  login_popup.ui
src/app/ui/src/: login_popup.cpp  login_popup.h  login_popup.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/app/useless/: CMakeLists.txt  reflect.h  reservation_manager.cc  timer.h
src/app/useless/dbaccess/: date.cc  db_defaults.h  db_session.h
src/app/useless/dbaccess/manip/: category_manipulator.cc  category_manipulator.h  credentials_manipulator.cc  customer_manipulator.cc  employee_manipulator.cc  entity_manipulator.h  offer_manipulator.cc  tour_manipulator.h
src/app/useless/dbaccess/table/: tour.h  valid.h
src/app/useless/src/: hldb.cc  hldb.h  hr_manager.cc  offer_manager.cc  session_manager.h
src/app/useless/src/dbaccess/: data_access_manager.cc  date.cc  date.h  db_connection.cc
src/app/useless/src/dbaccess/manip/: category_manipulator.cc  category_manipulator.h  credentials_manipulator.cc  credentials_manipulator.h  customer_manipulator.cc  customer_manipulator.h  employee_manipulator.cc  employee_manipulator.h  offer_manipulator.cc  offer_manipulator.h  tour_manipulator.cc  tour_manipulator.h
src/app/useless/src/dbaccess/table/: annual_income.h  category.h  credentials.h  customer.h  employee.h  offer.h  tour.h  valid.h
src/dbaccess/: annual_income.h  category.h  credentials.h  customer.h  da_manager.h  data_access_manager.cc  data_access_manager.h  date.cc  date.h  db_connection.cc  db_connection.h  db_connection_i.h  db_defaults.h  db_session.h  employee.h  mysql_types.h  offer.h  tour.h
src/dbaccess/manip/: category_manipulator.cc  category_manipulator.h  credentials_manipulator.cc  credentials_manipulator.h  customer_manager.cc  customer_manager.h  customer_manipulator.cc  customer_manipulator.h  employee_manager.cc  employee_manager.h  employee_manipulator.cc  employee_manipulator.h  entity_manipulator.h  offer_manager.cc  offer_manager.h  offer_manipulator.cc  offer_manipulator.h  tour_manager.cc  tour_manager.h  tour_manipulator.cc  tour_manipulator.h
src/dbaccess/table/: annual_income.h  category.h  credentials.h  customer.h  employee.h  offer.h  tour.h  valid.h
src/notify/: sendmail.c
tests/: CMakeLists.txt
tests/cslim_src/: FixtureInCpp.cc  Fixtures.cc  Main.cc  cslim_config.conf  data_conv.cc  login.cc
tests/src/: ScriptTableExampleEchoLoudly.cc  bd_managers_test.cc  data_manipulatros_test.cc  db_mangers.cc  db_test.cc  db_tools_test.cc  hldb_mock.h  hrmanager_test.cc  main_logic_test.cc  offermanager_test.cc  reservationmanager_test.cc  sessionmanager_test.cc  tools_test.cc
